--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,17 @@
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <style>
+         header, main, footer {
+             padding-left: 300px;
+            }
+
+            @media only screen and (max-width : 992px) {
+            header, main, footer {
+                padding-left: 0;
+                }
+        }
+      </style>
    </head>
    <body >
       <script type="text/javascript" src="js/materialize.min.js"></script>
